# 03-machine-learning

./: README.md
conversion-rate-challenge/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
conversion-rate-challenge/conversion_rate_challenge/: __init__.py  dataset.py  features.py  plots.py
conversion-rate-challenge/conversion_rate_challenge/modeling/: predict.py  train.py
conversion-rate-challenge/docs/: mkdocs.yml
conversion-rate-challenge/docs/docs/: index.md
conversion-rate-challenge/notebooks/: 03.00_-_Model_Introduction.ipynb  03.00_-_Model_LogReg_Conversion_rate_challenge.ipynb  03.01_-_Model_LogReg_New_Features_Conversion_rate_challenge.ipynb  03.02_-_Model_Random_Forest_New_Features_Conversion_rate_challenge.ipynb  03.03_-_Model_Optuna_Random_Forest_Features_Conversion_rate_challenge.ipynb  03.04_-_Model_Optuna_XGBoost_Class_Features_Conversion_rate_challenge.ipynb  03.11_-_Model_LogReg_One_Column_Conversion_rate_challenge.ipynb  03.12_-_Model_LogReg_Conversion_rate_challenge.ipynb  03.13_-_Model_Optuna_LogReg_Conversion_rate_challenge.ipynb  03.14_-_Model_Random_Forest_Conversion_rate_challenge.ipynb  03.15_-_Model_Optuna_Random_Forest_Conversion_rate_challenge.ipynb  03.16_-_Model_Optuna_XGBoost_Class_Conversion_rate_challenge.ipynb  03.22_-_Model_LogReg_Conversion_rate_challenge.ipynb  03.23_-_Model_Optuna_LogReg_Conversion_rate_challenge.ipynb  03.25_-_Model_Optuna_Random_Forest_Conversion_rate_challenge.ipynb  03.26_-_Model_Optuna_XGBoost_Class_Conversion_rate_challenge.ipynb
walmart-store-sales/: Makefile  README.md  pyproject.toml
walmart-store-sales/docs/: mkdocs.yml
walmart-store-sales/docs/docs/: index.md
walmart-store-sales/walmart_store_sales/: __init__.py  dataset.py  features.py  plots.py
walmart-store-sales/walmart_store_sales/modeling/: predict.py  train.py
