[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conversion_rate_challenge"
version = "0.0.1"
description = "Invalid Python version specifier In this Kaggle-like ML competition, predict newsletter subscriptions. Train your model on data_train.csv, then submit predictions for data_test.csv for f1-score evaluation and leaderboard ranking. Analyze your best model to recommend conversion improvements."
authors = [
  { name = "nclsprsnw" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["conversion_rate_challenge"]
include = ["pyproject.toml", "conversion_rate_challenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["conversion_rate_challenge"]
force-sort-within-sections = true

